--- a/app/views/journeys/_form.html.erb
+++ b/app/views/journeys/_form.html.erb
@@ -6,10 +6,10 @@
 <%= f.text_field :countries %>
 
 <%= f.label :departure_date %>
-<%= f.text_field :departure_date %>
+<%= f.date_field :departure_date %>
 
 <%= f.label :return_date %>
-<%= f.text_field :return_date %>
+<%= f.date_field :return_date %>
 
 <%= f.label :image %>
 <%= f.url_field :image %>
