--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,21 +6,53 @@
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+   <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
+   <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
+
   </head>
 
   <body>
+    <div id='map' style='width: 400px; height: 300px;'></div>
+    <script>
+    mapboxgl.accessToken = 'pk.eyJ1IjoiYW5nZXBvbCIsImEiOiJja3YzbHg4ZDcwcnM2Mm9xcG51ZG5lOGQzIn0.-ZjAUc6_dljaJQJsW7pcPw';
+
+    var map = new mapboxgl.Map({
+    container: 'map',
+    style: 'mapbox://styles/angepol/ckv6l69yk1pln15ngckywwr2t'
+
+    });
+    </script>
+
+    <!-- <iframe
+    width='100%'
+    height='400px' -->
+
+    <!-- src="https://api.mapbox.com/styles/v1/angepol/ckv6l69yk1pln15ngckywwr2t.html?title=false&access_token=pk.eyJ1IjoiYW5nZXBvbCIsImEiOiJja3YzbHg4ZDcwcnM2Mm9xcG51ZG5lOGQzIn0.-ZjAUc6_dljaJQJsW7pcPw&zoomwheel=false#13/33.75001/-118.4106"
+    title="Satellite Streets"
+    style="border:none;"></iframe> -->
+
     <nav>
       <%= link_to 'Home', root_path %>
       <% if @current_user.present? %>
         <% if @current_user.admin? %>
           <%= link_to 'All users', users_path %>
+
+
         <% end %>
+        <%= link_to 'All Journeys', journeys_path %>
         <%= link_to 'New Journey', new_journey_path %>
         <%= link_to "Log out #{ @current_user.email }", login_path, :method => 'delete' %>
       <% else %>
         <%= link_to 'Sign up', new_user_path %>
         <%= link_to 'Sign in', login_path %>
       <% end %>
+
+
+
+
+
+
     </nav>
     <%= yield %>
   </body>
