--- a/app/views/steps/show.html.erb
+++ b/app/views/steps/show.html.erb
@@ -4,8 +4,8 @@
 
 <ul>
   <li>Location: <%= @step.location %></li>
-<% if @step.journeys.present? %>
-  <li>Journey: <%= link_to @step.journeys.location, @step.journeys %></li> %>
+<% if @step.journey.present? %>
+  <li>Journey: <%= link_to @step.journey.name, @step.journey %></li>
     <% end %>
   <li>Story: <%= @step.story %></li>
   <li>Date: <%= @step.date.strftime '%A, %B %e, %Y' if @step.date.present? %></li>
@@ -13,5 +13,6 @@
 
 <div class="controls">
   <%= link_to 'Edit Step', edit_step_path(@step) %>
+  <%= link_to 'Journey', journey_path(@step.journey) %>
   <%= link_to 'Delete Step', @step, :method => 'delete', :class => 'hotdogs', :data => { :confirm => 'Are you sure?' } %>
 </div>
