--- a/app/views/journeys/index.html.erb
+++ b/app/views/journeys/index.html.erb
@@ -1,4 +1,7 @@
+
+<div class="alert alert-info" role="alert">
 <h1> All Journeys </h1>
+</div>
 
 <% if @current_user.journeys.empty? %>
 <p> No journeys to show</p>
