--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -1,11 +1,21 @@
+<div class="alert alert-info" role="alert">
 <h1>Log In</h1>
+</div>
 
   <%= form_tag login_path do %>
+  <div class="form-group"
   <%= label_tag :name %>
-  <%= text_field_tag :name %>
+  <%= text_field_tag :name, nil, :class => 'form-control' %>
+  </div>
+  <div class="form-group"
   <%= label_tag :email %>
-  <%= email_field_tag :email %>
+  <%= email_field_tag :email, nil, :class => 'form-control' %>
+  </div>
+
+  <div class="form-group"
   <%= label_tag :password %>
-  <%= password_field_tag :password %>
-  <%= submit_tag 'Log In' %>
+  <%= password_field_tag :password, nil, :class => 'form-control' %>
+  </div>
+
+  <%= submit_tag 'Log In', :class => "btn btn-info" %>
 <% end %>
