--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -17,9 +17,13 @@ body {
 
 #map {
 position: absolute;
-top: 60%;
+top: 0;
 bottom: 0;
 width: 50%;
+right: 0px;
+border: 3px solid green;
+padding-top: 10%;
+
 }
 
 .marker {
@@ -38,4 +42,15 @@ width: 50%;
 .mapboxgl-popup-content {
    text-align: center;
    font-family: 'Open Sans' sans-serif;
+}
+
+
+
+.journey {
+right: 0px;
+position: static;
+
+
+
+
 }
