--- a/app/views/journeys/_form.html.erb
+++ b/app/views/journeys/_form.html.erb
@@ -1,18 +1,29 @@
+
 <%= form_for @journey do |f| %>
+<div class ="form-group"
 <%= f.label :name %>
-<%= f.text_field :name, :required => true %>
+<%= f.text_field :name, :required => true, :class => 'form-control' %>
+ </div>
 
+<div class="form-group"
 <%= f.label :countries%>
-<%= f.text_field :countries %>
+<%= f.text_field :countries, :class => 'form-control' %>
+</div>
 
+<div class="form-group"
 <%= f.label :departure_date %>
-<%= f.date_field :departure_date %>
+<%= f.date_field :departure_date, :class => 'form-control' %>
+</div>
 
+<div class="form-group"
 <%= f.label :return_date %>
-<%= f.date_field :return_date %>
+<%= f.date_field :return_date, :class => 'form-control' %>
+</div>
 
+<div class="form-group"
 <%= f.label :image %>
-<%= f.url_field :image %>
+<%= f.url_field :image, :class => 'form-control' %>
+</div>
 
-<%= f.submit %>
+<%= f.submit "create journey", :class => "btn btn-info"  %>
 <% end %>
