--- a/app/views/steps/_form.html.erb
+++ b/app/views/steps/_form.html.erb
@@ -1,18 +1,48 @@
 <%= form_for @step do |f| %>
+
+<div class="form-group"
 <%= f.label :location %>
-<%= f.text_field :location, :required => true %>
+<%= f.text_field :location, :required => true, :class =>'form-control' %>
+</div>
 
+ <div class="mb-6">
 <%= f.label :story %>
-<%= f.text_area :story, maxlength: 1000, size: 30 %>
+<%= f.text_area :story, :class => 'form-control' %>
+</div>
+<!--
+ <div class="mb-6">
+   <label for="exampleFormControlTextarea1" class="form-label">Story</label>
+   <textarea class="form-control" id="exampleFormControlTextarea1" rows="6"></textarea>
+ </div> -->
 
+<div class="form-group"
 <%= f.label :date, 'Date' %>
-<%= f.date_field :date, :placeholder => 'YYYY-MM-DD' %>
+<%= f.date_field :date, :placeholder => 'YYYY-MM-DD', :class => 'form-control'%>
+</div>
 
+<div class="form-group"
 <%= f.label :image %>
-<%= f.url_field :image %>
+<%= f.url_field :image, :class => 'form-control' %>
+</div>
 
+ <div class="col-sm-3">
+  <label class="visually-hidden" for="specificSizeSelect"</label>
   <%= f.label :journey_id %>
-  <%= f.select :journey_id, Journey.pluck(:name, :id), :include_blank => true %>
+  <%= f.select :journey_id, Journey.pluck(:name, :id), :include_blank => true, :class => 'form-select',
+  :id =>"specificSizeSelect" %>
+ </div>
 
-<%= f.submit %>
+
+<%= f.submit "Edit Step", :class => 'btn btn-info' %>
 <% end %>
+
+
+ <!-- <div class="col-sm-3">
+   <label class="visually-hidden" for="specificSizeSelect">Preference</label>
+   <select class="form-select" id="specificSizeSelect">
+     <option selected>Choose...</option>
+     <option value="1">One</option>
+     <option value="2">Two</option>
+     <option value="3">Three</option>
+   </select>
+ </div> -->
