maplongitude and latitude edits

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
 
 <div class="alert alert-info" role="alert">
   <h1>Welcome to Traveller!</h1>
-    Plan, blog and share your adventures.
+    <p>Plan, blog and share your adventures.<p>
 </div>
 
 <!-- <p>Plan, blog and share your adventures</p> -->
