--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -13,17 +13,17 @@ body {
 
 .feature {
   max-height: 30em;
+  max-width: 100%;
 }
 
 #map {
-position: absolute;
-top: 0;
-bottom: 0;
-width: 50%;
-right: 0px;
+/* position: fixed; */
+left: 0;
+right: 0;
+width: 100%;
 border: 3px solid green;
 padding-top: 10%;
-
+min-height: 90vh
 }
 
 .marker {
@@ -44,13 +44,13 @@ padding-top: 10%;
    font-family: 'Open Sans' sans-serif;
 }
 
-
-
 .journey {
 right: 0px;
 position: static;
+}
 
-
-
-
+.journey-scroll {
+    height: 95vh;
+    overflow-y: scroll;
+    padding-bottom: 30px;
 }
