--- a/app/views/journeys/show.html.erb
+++ b/app/views/journeys/show.html.erb
@@ -1,47 +1,55 @@
+<div class="container">
+  <div class="row">
+    <div class="col journey-scroll">
+      <h1><%= @journey.name %></h1>
+      <div class="journey">
+      <%= image_tag @journey.image, :class => 'feature' if @journey.image.present? %>
+      </div>
+      <ul>
+        <li>Name: <%= @journey.name %></li>
+        <li>Countries: <%= @journey.countries %></li>
+        <li>Departure Date: <%= @journey.departure_date %></li>
+        <li>Return date: <%= @journey.return_date %></li>
+        </ul>
 
+      <% @journey.steps.each do |step| %>
+      <%= link_to image_tag(step.image, :class => 'thumb'), step %>
+      <ul>
+        <li><%= step.location %></li>
+        <li><%= step.story %></li>
+        <li><%= step.date %></li>
+      </ul>
+      <% end %>
 
-<h1><%= @journey.name %></h1>
-<div class="journey">
-<%= image_tag @journey.image, :class => 'feature' if @journey.image.present? %>
-</div>
-<ul>
-  <li>Name: <%= @journey.name %></li>
-  <li>Countries: <%= @journey.countries %></li>
-  <li>Departure Date: <%= @journey.departure_date %></li>
-  <li>Return date: <%= @journey.return_date %></li>
-  </ul>
+      <div class="controls">
+        <%= link_to 'Create Step', new_step_path %>
+        <%= link_to 'Edit Journey', edit_journey_path(@journey) %>
+        <%= link_to 'Delete journey', @journey, :method => 'delete', :class => 'hotdogs', :data => { :confirm => 'Are you sure!' } %>
+      </div>
+<!-- width=500px height=500px> -->
+    </div>
+    <div class="col">
+      <div id="map">
+        <script>
+      	mapboxgl.accessToken = 'pk.eyJ1IjoiYW5nZXBvbCIsImEiOiJja3YzbHg4ZDcwcnM2Mm9xcG51ZG5lOGQzIn0.-ZjAUc6_dljaJQJsW7pcPw';
+      const map = new mapboxgl.Map({
+      container: 'map', // container ID
+      style: 'mapbox://styles/angepol/ckv6njeji7sps15o2du4ju2g0', // style URL
+      center: [<%= @journey.steps.first.longitude %>, <%= @journey.steps.first.latitude %>], // starting position [lng, lat]
+      zoom: 9 // starting zoom
+      });
+      <% @journey.steps.each do |step| %>
+     <% if step.longitude && step.latitude%>
+       new mapboxgl.Marker()
+      .setLngLat([<%= step.longitude %>, <%= step.latitude %>])
+      .setPopup(new mapboxgl.Popup().setHTML("<h3><%= step.location %></h3>"))
+      .addTo(map);
+      <% end %>
+      <% end %>
 
-<% @journey.steps.each do |step| %>
-<%= link_to image_tag(step.image, :class => 'thumb'), step %>
-<ul>
-  <li><%= step.location %></li>
-  <li><%= step.story %></li>
-  <li><%= step.date %></li>
-</ul>
-<% end %>
+      </script>
+      </div>
 
-<div class="controls">
-  <%= link_to 'Create Step', new_step_path %>
-  <%= link_to 'Edit Journey', edit_journey_path(@journey) %>
-  <%= link_to 'Delete journey', @journey, :method => 'delete', :class => 'hotdogs', :data => { :confirm => 'Are you sure!' } %>
-</div>
-
-
-<div id="map" width=500px height=500px>
-  <script>
-	mapboxgl.accessToken = 'pk.eyJ1IjoiYW5nZXBvbCIsImEiOiJja3YzbHg4ZDcwcnM2Mm9xcG51ZG5lOGQzIn0.-ZjAUc6_dljaJQJsW7pcPw';
-const map = new mapboxgl.Map({
-container: 'map', // container ID
-style: 'mapbox://styles/angepol/ckv6njeji7sps15o2du4ju2g0', // style URL
-center: [<%= @journey.steps.first.longitude %>, <%= @journey.steps.first.latitude %>], // starting position [lng, lat]
-zoom: 25 // starting zoom
-});
-<% @journey.steps.each do |step| %>
- new mapboxgl.Marker()
-.setLngLat([<%= step.longitude %>, <%= step.latitude %>])
-.addTo(map);
-<% end %>
-
-
-</script>
+    </div>
+  </div>
 </div>
