--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,22 +15,36 @@
     </style>
    </head>
   <body>
-  <div class ="container">
-    <nav>
-      <%= link_to 'Home', root_path %>
-      <% if @current_user.present? %>
-        <% if @current_user.admin? %>
-          <%= link_to 'All users', users_path %>
+    <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-        <% end %>
-        <%= link_to 'All Journeys', journeys_path %>
-        <%= link_to 'New Journey', new_journey_path %>
-        <%= link_to "Log out #{ @current_user.email }", login_path, :method => 'delete' %>
-      <% else %>
-        <%= link_to 'Sign up', new_user_path %>
-        <%= link_to 'Sign in', login_path %>
-      <% end %>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <%= link_to 'Home', root_path, :class => "nav-link" %>
+            <% if @current_user.present? %>
+              <% if @current_user.admin? %>
+                <%= link_to 'All users', users_path, :class => "nav-link"%>
+              <% end %>
+              <%= link_to 'All Journeys', journeys_path, :class => "nav link" %>
+              <%= link_to 'New Journey', new_journey_path, :class => "nav-link" %>
+              <%= link_to "Log out #{ @current_user.email }", login_path, :method => 'delete', :class => "nav-link" %>
+            <% else %>
+             <%= link_to 'Sign up', new_user_path, :class => "nav-link" %>
+             <%= link_to 'Sign in', login_path, :class => "nav-link" %>
+            <% end %>
+
+          </div>
+        </div>
+      </div>
     </nav>
+  <!-- </div> -->
+
+
     <%= yield %>
   </body>
 </html>
