--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
     </style>
    </head>
   <body>
+
     <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
@@ -30,7 +31,7 @@
               <% if @current_user.admin? %>
                 <%= link_to 'All users', users_path, :class => "nav-link"%>
               <% end %>
-              <%= link_to 'All Journeys', journeys_path, :class => "nav link" %>
+              <%= link_to 'All Journeys', journeys_path, :class => "nav-link" %>
               <%= link_to 'New Journey', new_journey_path, :class => "nav-link" %>
               <%= link_to "Log out #{ @current_user.email }", login_path, :method => 'delete', :class => "nav-link" %>
             <% else %>
