--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <style>
     </style>
    </head>
-  <body>
+  <body class="<%=params[:controller]%> <%=params[:action] %>">
 
     <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
