--- a/app/views/journeys/show.html.erb
+++ b/app/views/journeys/show.html.erb
@@ -7,17 +7,17 @@
       </div>
       <ul>
 
-        <li>Countries: <%= @journey.countries %></li>
-        <li>Departure Date: <%= @journey.departure_date %></li>
-        <li>Return date: <%= @journey.return_date %></li>
+        <li><span class="bold">Countries: </span><%= @journey.countries %></li>
+        <li><span class="bold">Departure Date: </span> <%= @journey.departure_date %></li>
+        <li><span class="bold">Return Date: </span><%= @journey.return_date %></li>
         </ul>
 
       <% @journey.steps.each do |step| %>
       <%= link_to image_tag(step.image, :class => 'thumb'), step %>
       <ul>
-      <li class = 'step-info'> Location: <%= step.location %></li>
-      <li class = 'step-info'> Story: <%= step.story %></li>
-      <li class = 'step-info'> Date: <%= step.date %></li>
+      <li class = 'step-info'><span class="bold">Location: </span><%= step.location %></li>
+      <li class = 'step-info'><span class="bold">Story: </span> <%= step.story %></li>
+      <li class = 'step-info'><span class="bold">Date: </span> <%= step.date %></li>
       </ul>
       <% end %>
 
