--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,14 +17,14 @@
   <body class="<%=params[:controller]%> <%=params[:action] %>">
 
     <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Traveller</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+
+      <div class="collapse navbar-collapse" id="navbarNav">
           <div class="navbar-nav">
             <%= link_to 'Home', root_path, :class => "nav-link" %>
             <% if @current_user.present? %>
@@ -41,9 +41,8 @@
 
           </div>
         </div>
-      </div>
     </nav>
-  <!-- </div> -->
+
 
 
     <%= yield %>
