--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,10 @@
 <div class="alert alert-info" role="alert">
   <h1>All Users</h1>
 </div>
+
 <h2><%= User.count %> users</h2>
+<ul class="list-group">
 <% @users.each do |user| %>
-  <p><%= user.email %></p>
+<li class="list-group-item"><%= user.email %></li>
 <% end %>
+</ul>
