--- a/app/views/journeys/_form.html.erb
+++ b/app/views/journeys/_form.html.erb
@@ -25,5 +25,5 @@
 <%= f.url_field :image, :class => 'form-control' %>
 </div>
 
-<%= f.submit "create journey", :class => "btn btn-info"  %>
+<%= f.submit "Done", :class => "btn btn-info"  %>
 <% end %>
