--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,13 @@
 
 
 
-<div class="alert alert-info" role="alert">
+<div class="alert alert-light" role="alert">
   <h1>Welcome to Traveller!</h1>
     <p>Plan, blog and share your adventures.<p>
 </div>
 
 <!-- <p>Plan, blog and share your adventures</p> -->
+
 <% if @current_user.present? %>
-  <h1>Welcome back <%= @current_user.name %></h1>
+  <h2> Welcome <%= @current_user.name %></h2>
 <% end %>
