repairs development environment & styling tweaks

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,8 +2,8 @@
 
 
 <div class="alert alert-light" role="alert">
-  <h1>Welcome to Traveller!</h1>
-    <p>Plan, blog and share your adventures.<p>
+  <h1>Welcome to Traveller</h1>
+    <p>Plan, blog and share your adventures<p>
 </div>
 
 <!-- <p>Plan, blog and share your adventures</p> -->
@@ -11,3 +11,4 @@
 <% if @current_user.present? %>
   <h2> Welcome <%= @current_user.name %></h2>
 <% end %>
+
