--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -4,15 +4,27 @@ body {
 }
 
 body.pages.home {
-/* background-color: aliceblue; */
-/* background-image:url("/assets/background/atlas.jpg"); */
-/* background-image:url("/assets/background/earth.jpg"); */
-/* background-image:url("/assets/background/ice.jpg");  */
- background-image:url("/assets/background/road.jpg");
+ background-image:url("/assets/background/atlas.jpg");
  background-size: cover;
  background-repeat: no-repeat;
 
 }
+
+
+/* TO_DO - find out why font-size for h1 isn't picking up */
+.h1, h1 {
+text-align: center;
+font-family: Arial, Helvetica, sans-serif;
+font-size: 75px;
+}
+
+.h1, p {
+  font-family: ui-sans-serif;
+  font-size: 20px;
+  font-style: italic;
+  text-align: center;
+}
+
 
 body.journeys.index {
 background-color: aliceblue;
@@ -68,9 +80,9 @@ font-weight: 800;
 
 
 #map {
-left: 0;
-right: 0;
 width: 100%;
+right: 0;
+left: 0;
 border: 3px solid green;
 padding-top: 10%;
 min-height: 90vh
@@ -100,8 +112,8 @@ list-style: none;
 }
 
 .journey {
-right: 0px;
 position: static;
+right: 0px;
 }
 
 .journey-scroll {
