--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -3,6 +3,7 @@ body {
   min-height: 100vh;
 }
 
+
 body.pages.home {
  background-image:url("/assets/background/atlas.jpg");
  background-size: cover;
@@ -10,12 +11,11 @@ body.pages.home {
 
 }
 
-
 /* TO_DO - find out why font-size for h1 isn't picking up */
 .h1, h1 {
 text-align: center;
 font-family: Arial, Helvetica, sans-serif;
-font-size: 75px;
+font-size: 4.5rem;
 }
 
 .h1, p {
@@ -27,7 +27,8 @@ font-size: 75px;
 
 
 body.journeys.index {
-background-color: aliceblue;
+ /* background-color: aliceblue; */
+ background-image:url("/assets/background/wallmap.jpg"); 
 }
 
 body.journeys.new {
