Fixes stying: Adds back ground map image to journey show and step show pages

--- a/app/views/steps/show.html.erb
+++ b/app/views/steps/show.html.erb
@@ -13,7 +13,7 @@
     <li class = 'step-info'><span class="bold"> Date: </span><%= @step.date.strftime '%A, %B %e, %Y' if @step.date.present? %></li>
   <li class = 'step-info'><span class= "bold"> Location: </span><%= @step.location %></li>
 
-  <li class = 'step-info'><span class "bold"> Story: </span><%= @step.story %></li>
+  <li class = 'step-info'><span class="bold"> Story: </span><%= @step.story %></li>
 
 </ul>
 </div>
