--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -8,14 +8,24 @@ body.pages.home {
  background-image:url("/assets/background/atlas.jpg");
  background-size: cover;
  background-repeat: no-repeat;
-
 }
 
-/* TO_DO - find out why font-size for h1 isn't picking up */
+body > div > h2 {
+  color: white;
+  text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 60px;
+  padding-top: 20px;
+  font-weight: 700px;
+}
+
 .h1, h1 {
 text-align: center;
 font-family: Arial, Helvetica, sans-serif;
-font-size: 4.5rem;
+}
+
+body > div > div > h1 {
+  font-size: 75px;
 }
 
 .h1, p {
@@ -25,23 +35,25 @@ font-size: 4.5rem;
   text-align: center;
 }
 
-
 body.journeys.index {
- /* background-color: aliceblue; */
  background-image:url("/assets/background/wallmap.jpg"); 
 }
 
 body.journeys.new {
-background-color: aliceblue;
+  background-image:url("/assets/background/wallmap.jpg"); 
 }
 
 body.journeys.show {
-background-color: aliceblue;
+background-image:url("/assets/background/wallmap.jpg"); 
 }
 
 body.users.index {
 background-color: aliceblue;
 
+}
+
+body.steps.show {
+background-image:url("/assets/background/wallmap.jpg"); 
 }
 
 .container {
@@ -63,8 +75,8 @@ background-color: aliceblue;
 }
 
 ul {
-    margin: 2px; /* To remove default bottom margin */
-    padding: 0; /* To remove default left padding */
+    margin: 2px; 
+    padding: 0;
 }
 
 .controls {
